# Initial-public-local-agentic-RAG-starter

./: .env.example  .gitignore  README.md  config.qwen35.small.yaml  config.small.permissions.yaml  config.small.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
docs/: FRESH_CLONE_SMOKE_TEST.md  V1_SCOPE.md
prompts/: guided_codex_prompt.md
sample_corpus/: company_handbook.md  incident_playbook.md  pricing_notes.txt  restricted_internal_roadmap.md  restricted_internal_roadmap.md.meta.yaml
scripts/: bootstrap.sh
src/local_agentic_rag/: __init__.py  agent.py  agent_tools.py  bootstrap.py  chunking.py  citations.py  cli.py  clients.py  config.py  ingest_bridge.py  ingestion.py  mcp_server.py  mcp_tools.py  metadata.py  models.py  ollama_admin.py  parsers.py  permissions.py  planning_artifacts.py  prompt_suggestions.py  retrieval.py  sensitivity.py  service.py  storage.py  utils.py  vector_index.py  web_server.py
src/local_agentic_rag/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: test_auto_restrict_permissions.py  test_ingest_and_answer.py  test_mcp_tools.py  test_permissions_and_reindex.py  test_web_server.py
tests/unit/: test_agent_helpers.py  test_chunking.py  test_citations.py  test_cli.py  test_clients.py  test_ingest_bridge.py  test_metadata.py  test_parsers.py  test_permissions.py  test_prompt_suggestions.py  test_sensitivity.py  test_storage.py
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/: App.tsx  index.css
(+8 files in other folders)
